variables.Variables.scala.code
var nbPas = 0
while(estSurBiscuit == False) {avance()}                           
prendBiscuit()
droite()
droite()
var dejaFait == 0                               
while (dejaFait != nbPas) {avance()}                             